--- a/modal.html
+++ b/modal.html
@@ -6,13 +6,7 @@
   </head>
   <body>
     <div id="content">
-      <h2>Tips for using t.modal()</h2>
-      <hr/>
-      <ol>
-        <li>You should only call t.modal() as a response to a user action, such as clicking a button.</li>
-        <li>Try to use t.popup() when possible instead of t.modal() as it helps to better maintain context.</li>
-        <li>Try to get your modal to load and render as quickly as possible.</li>
-      </ol>
+      <iframe src="https://docs.google.com/a/dp6.com.br/forms/d/e/1FAIpQLSepQaumfJGrFtzx_WxS0EP_c-jqkyxhE0vhCYI4M2-kbL_Ldg/viewform?c=0&w=1"></iframe>
     </div>
     <script src="./js/modal.js"></script>
   </body>
