--- a/modal-abn.html
+++ b/modal-abn.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="content">
-      <iframe width="100%" height="100%" border="0" src="https://docs.google.com/forms/d/e/1FAIpQLSe5hkTnikivD5ET85Rlzm09iozdbFRWfbQioJKE3vzFa6HjLA/viewform"></iframe>
+      <iframe width="100%" height="100%" frameBorder="0" src="https://docs.google.com/forms/d/e/1FAIpQLSe5hkTnikivD5ET85Rlzm09iozdbFRWfbQioJKE3vzFa6HjLA/viewform"></iframe>
     </div>
     <script src="./js/modal.js"></script>
   </body>
