--- a/authorize.html
+++ b/authorize.html
@@ -19,7 +19,7 @@
 
       var apiKey = t.arg('apiKey'); // Passed in as an argument to our iframe
 
-      var trelloAuthUrl = `https://trello.com/1/authorize?expiration=never&name=dp6-oi-google-form-to-trello&scope=read&key=${apiKey}&callback_method=fragment&return_url=${window.location.origin}%2Fauth-success.html`;
+      var trelloAuthUrl = `https://trello.com/1/authorize?expiration=never&name=dp6-oi-google-form-to-trello&scope=read&key=d22c91d7a94f7bc61767990284299002&callback_method=fragment&return_url=${window.location.origin}%2Fauth-success.html`;
 
       var tokenLooksValid = function(token) {
         // If this returns false, the Promise won't resolve.
